--- a/src/features/home/style/header.css
+++ b/src/features/home/style/header.css
@@ -3,3 +3,10 @@
 .header-container{
     height: var(--headerSize); /* this variable is declared inside home.css */
 }
+
+@media (max-width : 775px) { /*i don't why my header is not at top:0px when width < 775 , to solve this problem i used the code below  */
+  .header-container {
+    margin-top: -100px;
+    position: fixed;
+  }
+}
