--- a/src/features/home/style/sidebar.css
+++ b/src/features/home/style/sidebar.css
@@ -1,11 +1,14 @@
-
-
 .sidebar {
-    height: calc(100vh - var(--headerSize));
+  height: calc(100vh - var(--headerSize));
 }
 
-.quote{
-    font-size: 20px;
-    font-weight: bold;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+.quote {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+@media (max-width: 775px) { /* margin is   added to the sidebar for the small screen (mobile)  */
+  .sidebar {
+    margin-top: 100px;
+  }
 }
